--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -40,7 +40,7 @@
                 <span id="pwmatch" class="fa fa-times" style="color:#FF0004;"></span> Passwords Match
                 </div>
                 </div>
-                <input type="submit" class="col-xs-12 btn btn-primary btn-load btn-lg"  value="Change Password">
+                <!-- <input type="submit" class="col-xs-12 btn btn-primary btn-load btn-lg"  value="Change Password"> -->
               </form>
             </div><!--/col-sm-6-->
           </div><!--/row-->
