--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -17,17 +17,17 @@
 
           <div class="row">
             <div class="col-sm-12 ">
-              <p class="text-center">Use the form below to change your password. Your password cannot be the same as your username.</p>
+              <p class="text-center">Utilice el siguiente formulario para cambiar su contraseña</p>
               <form method="post" id="passwordForm">
                 <input type="password" class="input-lg form-control" ng-model="user.password" name="password1" id="password1" placeholder="New Password" autocomplete="off">
                 <div class="row">
                 <div class="col-sm-6">
-                <span id="8char" class="fa fa-times" style="color:#FF0004;"></span> 8 Characters Long<br>
+                <span id="8char" class="fa fa-times" style="color:#FF0004;"></span> 8 caracteres de largo<br>
                 <span id="ucase" class="fa fa-times" style="color:#FF0004;"></span> One Uppercase Letter
                 </div>
                 <div class="col-sm-6">
-                <span id="lcase" class="fa fa-times" style="color:#FF0004;"></span> One Lowercase Letter<br>
-                <span id="num" class="fa fa-times" style="color:#FF0004;"></span> One Number
+                <span id="lcase" class="fa fa-times" style="color:#FF0004;"></span> Una letra mayúscula<br>
+                <span id="num" class="fa fa-times" style="color:#FF0004;"></span> Un numero
                 </div>
                 </div>
                 <input type="password"
@@ -37,7 +37,7 @@
                 name="password2" id="password2" placeholder="Repeat Password" autocomplete="off">
                 <div class="row">
                 <div class="col-sm-12">
-                <span id="pwmatch" class="fa fa-times" style="color:#FF0004;"></span> Passwords Match
+                <span id="pwmatch" class="fa fa-times" style="color:#FF0004;"></span> Las contraseñas coinciden
                 </div>
                 </div>
                 <!-- <input type="submit" class="col-xs-12 btn btn-primary btn-load btn-lg"  value="Change Password"> -->
