--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -19,7 +19,7 @@
             <div class="col-sm-12 ">
               <p class="text-center">Utilice el siguiente formulario para cambiar su contraseña</p>
               <form method="post" id="passwordForm">
-                <input type="password" class="input-lg form-control" ng-model="user.password" name="password1" id="password1" placeholder="New Password" autocomplete="off">
+                <input type="password" class="input-lg form-control" ng-model="newPass" name="password1" id="password1" placeholder="New Password" autocomplete="off">
                 <div class="row">
                 <div class="col-sm-6">
                 <span id="8char" class="fa fa-times" style="color:#FF0004;"></span> 8 caracteres de largo<br>
