--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -223,7 +223,7 @@
                     </div>
                 </div>
 
-                <div class="row">
+                <div ng-if="ID != null" class="row">
                   <div class="col-lg-2 col-sm-5">
                     </div>
                       <div class="col-lg-6 col-sm-6 ml-auto">
