--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -144,7 +144,8 @@
 
 
               <div class="form-group" >
-                <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsDetalil">
+                <table class="table table-striped table-bordered"  >
+                  <!-- <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsDetalil"> -->
                     <thead>
                         <tr>
                         <!-- <th scope="col"><p class="text-center">#</p></th> -->
