--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -439,7 +439,8 @@
 
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
 
-                  <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsDetalil">
+                  <!-- <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsDetalil"> -->
+                      <table class="table table-striped table-bordered"  >
                       <thead>
                           <tr>
                           <!-- <th scope="col"><p class="text-center">#</p></th> -->
