--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <!--[if IE 7]>         <html lang="en" ng-app="app" class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html lang="en" ng-app="app" class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]><!-->
-<html lang="en" ng-app="app" class="no-js">
+<html lang="es" ng-app="app" class="no-js">
 <!--<![endif]-->
 
 <head>
@@ -16,6 +16,7 @@
 
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="mobile-web-app-capable" content="yes">
+  <meta name="google" content="notranslate" />
 
   <script src="https://kit.fontawesome.com/5cb3b03b01.js"></script>
   <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
