--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -41,6 +41,16 @@
         </button>
       </div>
       <div class="modal-body">
+
+        <ul class="nav nav-tabs mb-4">
+            <li class="nav-item">
+              <a class="nav-link " ng-class="{ active : tabsIndex == 0 }" ng-click="goToTab(0)" >Informacion Cliente </a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" ng-class="{ active : tabsIndex == 1 }"  ng-click="goToTab(1)" >Detalle de pedido </a>
+            </li>
+        </ul>
+
       <form>
 
 
