--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -86,20 +86,19 @@
                 <div class="col-md-12">
 
                   <div class="tab-pane active in" id="home">
-                    <form id="tab">
-                        <div class="col-md-12">
-                          <label>Username</label>
-                          <input type="text" ng-model="user.username" ng-disabled="typeview == 'view'" class="input-xlarge">
 
-                        </div>
-                        <div class="col-md-12">
-                          <label>First Name</label>
-                          <input type="text" ng-model="user.name" ng-disabled="typeview == 'view'" class="input-xlarge">
-                        </div>
+                    <form>
+                      <div class="form-group">
+                        <label for="exampleInputEmail1">Username</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" ng-model="user.username" ng-disabled="typeview == 'view'"  placeholder="Enter email">
 
-                        <div>
-                          <button type="button"  class="btn btn-primary" ng-if="typeview == 'view'" data-toggle="modal" data-target="#modalPsw">Cambiar Password</button>
                       </div>
+                      <div class="form-group">
+                        <label for="exampleInputPassword1">Nombre</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1" ng-model="user.name" ng-disabled="typeview == 'view'" placeholder="Nombre">
+                      </div>
+
+                      <button class="btn btn-primary" ng-if="typeview == 'view'" data-toggle="modal" data-target="#modalPsw" >Cambiar Password</button>
                     </form>
                   </div>
 
