--- a/app/comps/login/login.html
+++ b/app/comps/login/login.html
@@ -1,4 +1,4 @@
-<div class="container-fluid">
+<div class="">
   <div class="row flyer" style="background-image:url('{{urlFlyer}}');height:100vh">
     <div class="col-md-6" >
 
