--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -48,47 +48,17 @@
           Facturas
         </a>
       <li >
-        <a href="/ddo" class="">
+        <a href="#!/login" class="">
           <i class=" fa fa-fw  fa-times" ></i>
           Salir
         </a>
       </li>
       <div id="encrypted"></div>
       <div id="decrypted"></div>
-<!--
-        <li>
-            <a href="#"><i class="fa fa-fw fa-folder"></i> Page one</a>
-        </li>
-        <li>
-            <a href="#"><i class="fa fa-fw fa-file-o"></i> Second page</a>
-        </li>
-        <li>
-            <a href="#"><i class="fa fa-fw fa-cog"></i> Third page</a>
-        </li>
-        <li class="dropdown">
-          <a  class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-fw fa-plus"></i> Dropdown <span class="caret"></span></a>
-          <ul class="dropdown-menu" role="menu">
-            <li class="dropdown-header">Dropdown heading</li>
-            <li><a href="#">Action</a></li>
-            <li><a href="#">Another action</a></li>
-            <li><a href="#">Something else here</a></li>
-            <li><a href="#">Separated link</a></li>
-            <li><a href="#">One more separated link</a></li>
-          </ul>
-        </li>
-        <li>
-            <a href="#"><i class="fa fa-fw fa-bank"></i> Page four</a>
-        </li>
-        <li>
-            <a href="#"><i class="fa fa-fw fa-dropbox"></i> Page 5</a>
-        </li>
-        <li>
-            <a href="#"><i class="fa fa-fw fa-twitter"></i> Last page</a>
-        </li>
-    </ul> -->
+
 </nav>
 
-<button type="button" class="hamburger is-closed animated fadeInLeft" ng-click="hamburger_cross()" data-toggle="offcanvas">
+<button type="button" class="hamburger is-open animated fadeInLeft" ng-click="hamburger_cross()" data-toggle="offcanvas">
   <span class="hamb-top"></span>
   <span class="hamb-middle"></span>
   <span class="hamb-bottom"></span>
