--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -62,6 +62,8 @@
             <option ng-repeat="type in type_user" value="{{type.type}}">
               {{type.text | uppercase}}
             </option>
+            <option value="seller" ng-if="userLogged.role == 'sisAdm' || userLogged.role == 'root'" >Vendedor</option>
+            <option value="sisAdm" ng-if="userLogged.role == 'sisAdm' || userLogged.role == 'root'" >Administrador de sistema</option>
             <option value="" disabled selected>Selecciona un tipo de usuario</option>
           </select>
 
@@ -106,31 +108,34 @@
             <tbody>
 
               <tr  ng-repeat="x in modulos"  >
-                <th scope="row">{{x}}</th>
-                <td>
-                  <div class="form-check" ng-if="typeview == 'add' || typeview == 'edit'" >
-                    <input type="checkbox" class="form-check-input" ng-model="permisos[x].ver" ng-disabled="!hasOwnProp(x,'ver')"  >
-                  </div>
-                  <span ng-if="typeview == 'view' && permisos[x].ver" ><i class="fas fa-check"></i></span>
-                </td>
-                <td>
-                  <div class="form-check" ng-if="typeview == 'add' || typeview == 'edit' && hasOwnProp(x,'crear')"  >
-                    <input type="checkbox" class="form-check-input" ng-model="permisos[x].crear" ng-disabled="!hasOwnProp(x,'crear')" >
-                  </div>
-                  <span ng-if="typeview == 'view' && permisos[x].crear" ><i class="fas fa-check"></i></span>
-                </td>
-                <td>
-                  <div class="form-check" ng-if="typeview == 'add' || typeview == 'edit' && hasOwnProp(x,'editar')" typeview == 'add' || typeview == 'edit'  >
-                    <input type="checkbox" class="form-check-input"  ng-model="permisos[x].editar" ng-disabled="!hasOwnProp(x,'editar')" >
-                  </div>
-                  <span ng-if="typeview == 'view' && permisos[x].editar" ><i class="fas fa-check"></i></span>
-                </td>
-                <td>
-                  <div class="form-check"ng-if="typeview == 'add' || typeview == 'edit' && hasOwnProp(x,'eliminar')" typeview == 'add' || typeview == 'edit'  >
-                    <input type="checkbox" class="form-check-input" ng-model="permisos[x].eliminar" ng-disabled="!hasOwnProp(x,'eliminar')" >
-                  </div>
-                  <span ng-if="typeview == 'view' && permisos[x].eliminar" ><i class="fas fa-check"></i></span>
-                </td>
+                <div ng-show="validaAccess(permisos[x].access)" >
+                  <th scope="row">{{x}}</th>
+                  <td>
+                    <div class="form-check" ng-if="typeview == 'add' || typeview == 'edit'" >
+                      <input type="checkbox" class="form-check-input" ng-model="permisos[x].ver" ng-disabled="!hasOwnProp(x,'ver')"  >
+                    </div>
+                    <span ng-if="typeview == 'view' && permisos[x].ver" ><i class="fas fa-check"></i></span>
+                  </td>
+                  <td>
+                    <div class="form-check" ng-if="typeview == 'add' || typeview == 'edit' && hasOwnProp(x,'crear')"  >
+                      <input type="checkbox" class="form-check-input" ng-model="permisos[x].crear" ng-disabled="!hasOwnProp(x,'crear')" >
+                    </div>
+                    <span ng-if="typeview == 'view' && permisos[x].crear" ><i class="fas fa-check"></i></span>
+                  </td>
+                  <td>
+                    <div class="form-check" ng-if="typeview == 'add' || typeview == 'edit' && hasOwnProp(x,'editar')" typeview == 'add' || typeview == 'edit'  >
+                      <input type="checkbox" class="form-check-input"  ng-model="permisos[x].editar" ng-disabled="!hasOwnProp(x,'editar')" >
+                    </div>
+                    <span ng-if="typeview == 'view' && permisos[x].editar" ><i class="fas fa-check"></i></span>
+                  </td>
+                  <td>
+                    <div class="form-check"ng-if="typeview == 'add' || typeview == 'edit' && hasOwnProp(x,'eliminar')" typeview == 'add' || typeview == 'edit'  >
+                      <input type="checkbox" class="form-check-input" ng-model="permisos[x].eliminar" ng-disabled="!hasOwnProp(x,'eliminar')" >
+                    </div>
+                    <span ng-if="typeview == 'view' && permisos[x].eliminar" ><i class="fas fa-check"></i></span>
+                  </td>
+                </div>
+
               </tr>
 
             </tbody>
