--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -732,9 +732,9 @@
                       <th scope="col"><p class="text-center">Existencia</p></th>
                       <th scope="col"><p class="text-center">Principio Activo</p></th>
                       <th scope="col"><p class="text-center">Precio Bs.S</p></th>
-                      <th scope="col"><p class="text-center">Iva Bs.S</p></th>
+                      <!-- <th scope="col"><p class="text-center">Iva Bs.S</p></th> -->
                       <th scope="col"><p class="text-center">Precio USD</p></th>
-                      <th scope="col"><p class="text-center">Iva USD</p></th>
+                      <!-- <th scope="col"><p class="text-center">Iva USD</p></th> -->
                       <th scope="col"><p class="text-center">Proveedor</p></th>
                       </tr>
                   </thead>
@@ -749,9 +749,9 @@
                           <td><p class="text-center">{{ x.existencia }}</p></td>
                           <td><p class="text-center">{{ x.princ_activo }}</p></td>
                           <td><p class="text-right">{{  x.precioFormatVE }}</p></td>
-                          <td><p class="text-right">{{  x.iva_bs }}</p></td>
+                          <!-- <td><p class="text-right">{{  x.iva_bs }}</p></td> -->
                           <td><p class="text-right">{{  x.precioFormatUSD }}</p></td>
-                          <td><p class="text-right">{{  x.iva_usd }}</p></td>
+                          <!-- <td><p class="text-right">{{  x.iva_usd }}</p></td> -->
                           <td><p class="text-left">{{  x.proveedor }}</p></td>
 
                       </tr>
