--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -112,7 +112,7 @@
               </div>
 
 
-              <div class="row mt-3 mb-5" >
+              <div class="row mt-3 mb-3" >
 
 
 
@@ -139,6 +139,31 @@
 
                 </div>
 
+
+
+              </div>
+
+              <div class="row mb-5">
+                <div class="col-3">
+                  <label>Maximo unidades medicina</label><br>
+                  <span >{{client.max_unid_med_emp}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>Maximo unidades miscelanos</label><br>
+                  <span >{{client.max_unid_misc_emp}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>disponible unidades medicina</label><br>
+                  <span >{{client.unid_disp_med_emp - totales.empMed}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>disponible unidades miscelanos</label><br>
+                  <span >{{client.unid_disp_misc_emp - totales.empMisc}}</span>
+
+                </div>
               </div>
 
 
@@ -437,6 +462,29 @@
 
               </div>
 
+              <div class="row mb-5" ng-show="editView">
+                <div class="col-3">
+                  <label>Maximo unidades medicina</label><br>
+                  <span >{{client.max_unid_med_emp}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>Maximo unidades miscelanos</label><br>
+                  <span >{{client.max_unid_misc_emp}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>disponible unidades medicina</label><br>
+                  <span >{{client.unid_disp_med_emp - totales.empMed}}</span>
+
+                </div>
+                <div class="col-3">
+                  <label>disponible unidades miscelanos</label><br>
+                  <span >{{client.unid_disp_misc_emp - totales.empMisc}}</span>
+
+                </div>
+              </div>
+
             <div class="col-12 col-sm-12 col-md-12 col-lg-12">
 
                   <!-- <table class="table table-striped table-bordered"  datatable="ng" dt-options="dtOptionsDetalil"> -->
@@ -729,6 +777,7 @@
                       <th scope="col"><p class="text-center">Opciones</p></th>
                       <th scope="col"><p class="text-center">Nombre Producto</p></th>
                       <th scope="col"><p class="text-center">Categoria</p></th>
+                      <th scope="col" ng-if="client.grupo_cliente == '02'" ><p class="text-center">Tipo (empleado)</p></th>
                       <th scope="col"><p class="text-center">Existencia</p></th>
                       <th scope="col"><p class="text-center">Principio Activo</p></th>
                       <th scope="col"><p class="text-center">Precio Bs.S</p></th>
@@ -746,6 +795,7 @@
                           <td><i class="fa fa-eye" style="cursor: pointer;"  ng-click="selectProduct($index)" ></i></td>
                           <td><p class="text-center">{{ x.nombre_producto }}</p></td>
                           <td><p class="text-center">{{ x.categoria }}</p></td>
+                          <td><p class="text-center" ng-if="client.grupo_cliente == '02'" >{{ x.tipo_prod_emp }}</p></td>
                           <td><p class="text-center">{{ x.existencia }}</p></td>
                           <td><p class="text-center">{{ x.princ_activo }}</p></td>
                           <td><p class="text-right">{{  x.precioFormatVE }}</p></td>
@@ -800,7 +850,7 @@
 
               <div class="col-md-4 ">
                   <p class="font-weight-bold mb-4">Detalles</p>
-
+                  <p class="mb-1" ng-if="client.grupo_cliente == '02'" ><span class="text-muted">Tipo (empleado): </span> {{articulo.tipo_prod_emp}}</p>
                   <p class="mb-1"><span class="text-muted">Regulado: </span> {{articulo.ind_regulado}}</p>
                   <p class="mb-1"><span class="text-muted">Impuesto: </span> {{articulo.ind_impuesto}}</p>
                   <p class="mb-1"><span class="text-muted">Psicotropico: </span> {{articulo.ind_psicotropico}}</p>
