--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -72,6 +72,7 @@
             </ol>
           </nav>
 
+          <header-client></header-client>
 
 <div class="col-md-3"></div>
     <div class="col-md-6 mt-10 mb-10">
