--- a/app/comps/usuarios/usuarios.html
+++ b/app/comps/usuarios/usuarios.html
@@ -76,7 +76,7 @@
             <div class="form-group">
               <label>Username:</label><br>
               <span ng-if="typeview == 'view'"  >{{user.username}}</span>
-              <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add'" class="form-control" placeholder="Username">
+              <input type="text" ng-model="user.username"  ng-keyup="availableUser()" ng-if="typeview == 'add' || typeview == 'edit'" ng-disabled="typeview == 'edit'"  class="form-control" placeholder="Username">
               <div class="invalid-feedback">
                 Este usuario ya existe
               </div>
