--- a/app/comps/perfil/perfil.html
+++ b/app/comps/perfil/perfil.html
@@ -77,6 +77,12 @@
 <div class="col-md-3"></div>
     <div class="col-md-6 mt-10 mb-10">
       <div class="card " >
+        <div class="card card-min " >
+          <div class="card-info-header">
+            Informacion de usuario
+
+
+          </div>
         <div class="card-body">
           <div class="row">
             <div class="col-md-12">
