--- a/app/comps/sidebar/sidebar.html
+++ b/app/comps/sidebar/sidebar.html
@@ -15,7 +15,7 @@
         <li ng-if="permisos.perfil.ver" >
           <a href="#!/perfil" class="">
             <i class="fa fa-fw fas fa-user" ></i>
-            perfil
+            Perfil
           </a>
         </li>
         <li ng-if="permisos.usuario.ver" >
