--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -145,22 +145,22 @@
 
               <div class="row mb-5">
                 <div class="col-3">
-                  <label>Maximo unidades medicina</label><br>
+                  <label>Max. unidades medicina</label><br>
                   <span >{{client.max_unid_med_emp}}</span>
 
                 </div>
                 <div class="col-3">
-                  <label>Maximo unidades miscelanos</label><br>
+                  <label>Max. unidades miscelanos</label><br>
                   <span >{{client.max_unid_misc_emp}}</span>
 
                 </div>
                 <div class="col-3">
-                  <label>Disponible unidades medicina</label><br>
+                  <label>Disp. unidades medicina</label><br>
                   <span >{{client.unid_disp_med_emp - totales.empMed}}</span>
 
                 </div>
                 <div class="col-3">
-                  <label>Disponible unidades miscelanos</label><br>
+                  <label>Disp. unidades miscelanos</label><br>
                   <span >{{client.unid_disp_misc_emp - totales.empMisc}}</span>
 
                 </div>
@@ -464,22 +464,22 @@
 
               <div class="row mb-5" ng-show="editView">
                 <div class="col-3">
-                  <label>Maximo unidades medicina</label><br>
+                  <label>Max. unidades medicina</label><br>
                   <span >{{client.max_unid_med_emp}}</span>
 
                 </div>
                 <div class="col-3">
-                  <label>Maximo unidades miscelanos</label><br>
+                  <label>Max. unidades miscelanos</label><br>
                   <span >{{client.max_unid_misc_emp}}</span>
 
                 </div>
                 <div class="col-3">
-                  <label>disponible unidades medicina</label><br>
+                  <label>Disp. unidades medicina</label><br>
                   <span >{{client.unid_disp_med_emp - totales.empMed}}</span>
 
                 </div>
                 <div class="col-3">
-                  <label>disponible unidades miscelanos</label><br>
+                  <label>Disp. unidades miscelanos</label><br>
                   <span >{{client.unid_disp_misc_emp - totales.empMisc}}</span>
 
                 </div>
