--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -91,6 +91,8 @@
           <li class="breadcrumb-item active" aria-current="page">Pedidos facturados</li>
         </ol>
       </nav>
+
+
       <header-client></header-client>
 
       <div ng-show="!hasUserClient">
@@ -139,6 +141,13 @@
 
 
 
+      </div>
+
+      <div class="alert alert-info alert-dismissible fade show"  role="alert">
+        <strong>Informacion!</strong> La información mostrada corresponde al año en transcurso.
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
 
       <div class="row">
