--- a/app/comps/saldo/saldo.html
+++ b/app/comps/saldo/saldo.html
@@ -53,12 +53,56 @@
 
       <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6">
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios1" ng-value="0" >
+            <label class="form-check-label" for="exampleRadios1">
+              Busqueda por producto
+            </label>
+          </div>
+          <div class="form-check mb-3">
+            <input class="form-check-input" type="radio" name="exampleRadios" ng-model="tipoBusqueda" id="exampleRadios2" ng-value="1" >
+            <label class="form-check-label" for="exampleRadios2">
+              Busqueda por componente activo
+            </label>
+          </div>
           <label for="clientes">Busqueda por producto</label>
           <div class="input-group mb-3">
             <input type="text" class="form-control"  ng-model="busqueda_prod" placeholder="Busqueda por Producto" aria-label="Busqueda por Producto" aria-describedby="basic-addon2">
             <div class="input-group-append">
               <button class="btn btn-outline-secondary"   ng-click="getProdNew(true)" type="button">Buscar</button>
             </div>
+          </div>
+
+          <div class="row">
+            <div class="col-md-6">
+              <label for="proveedor">Filtrar por proveedor</label>
+              <div class="input-group mb-3 ">
+                <div class="form-group">
+                  <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                  <select class="form-control" ng-model="proveedor.cod_proveedor" id="proveedor" >
+                    <option value="null" >Todos</option>
+                    <option ng-repeat="x in listProveedores" value="{{x.cod_proveedor}}">{{x.nombre_proveedor}}</option>
+                    <option value="" disabled selected>Seleccione un proveedor</option>
+                  </select>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-6">
+              <label for="filtro">Filtrar por categoria</label>
+              <div class="input-group mb-3 ">
+                <div class="form-group">
+                  <!-- <label for="exampleFormControlSelect1">Seleccione</label> -->
+                  <select class="form-control" ng-model="categoria.CODIGO" id="proveedor" >
+                    <!-- <option value="null" >Todos</option> -->
+                    <option ng-repeat="x in listCategorias" value="{{x.CODIGO}}">{{x.NOMBRE}}</option>
+                    <option value="" disabled selected>Seleccione una categoria</option>
+                  </select>
+                </div>
+              </div>
+
+            </div>
+
           </div>
 
         </div>
