--- a/app/comps/facturado/facturado.html
+++ b/app/comps/facturado/facturado.html
@@ -142,13 +142,15 @@
 
 
       </div>
+<div class="row">
 
-      <div class="alert alert-info alert-dismissible fade show"  role="alert">
-        <strong>Informacion!</strong> La información mostrada corresponde al año en transcurso.
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
+  <div class="alert alert-info alert-dismissible fade show"  role="alert">
+    <strong>Informacion!</strong> La información mostrada corresponde al año en transcurso.
+    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+      <span aria-hidden="true">&times;</span>
+    </button>
+  </div>
+</div>
 
       <div class="row">
         <div class="col-md-12 mt-10 mb-10">
