--- a/app/comps/pedidos/pedidos.html
+++ b/app/comps/pedidos/pedidos.html
@@ -996,7 +996,7 @@
 
         <header-client ></header-client>
 
-        <div ng-show="!hasUserClient">
+        <div ng-if="!hasUserClient">
           <div class="row" style="margin-bottom: 15px;">
             <div class="col-md-12">
               <div class="card " >
